--- a/road.html
+++ b/road.html
@@ -8,8 +8,7 @@
   <link rel="stylesheet" href="css/style.css" />
  
   <style>
-
-  #saveDataButton {
+#saveDataButton {
   border: 2px solid #2b13bb;
   border-bottom: 2px solid #2b13bb;
   border-top: 2px solid #2b13bb;
@@ -19,12 +18,13 @@
   color: black;
   padding: 0px 5px;
   display: none;
-  top: 683px;
+  top: 75%; /* changed from 683px */
   font-size: 19px;
   height: 37px;
   width: 37px;
-  left: 865px;
+  left: 90%; /* changed from 865px */
 }
+
 .delete-button {
   border: 2px solid #2b13bb;
   padding: 6px 7.3px;
@@ -34,12 +34,12 @@
   background-color: white;
   color: black;
   cursor: pointer;
-  left: 513px;
+  left: 53%; /* changed from 513px */
   position: absolute;
-  top: 487px !important;
+  top: 53%; /* changed from 487px */
   height: 37px;
   width: 37px;
-  display: none ;
+  display: none;
   border-top: 2px solid #2b13bb;
 }
 
@@ -52,14 +52,12 @@
   padding: 3px 7px;
   display: none;
   position: fixed;
-  top: 683px;
+  top: 75%; /* changed from 683px */
   font-size: 15px;
   height: 37px;
   width: 37px;
-  left: 908px;
+  left: 95%; /* changed from 908px */
 }
-
-
 
 #editFeatureButton {
   border: 2px solid #2b13bb;
@@ -68,40 +66,42 @@
   width: 37px;
   display: none;
   position: fixed;
-  top: 683px;
-  left: 822px;
+  top: 75%; /* changed from 683px */
+  left: 85%; /* changed from 822px */
   padding: 5px;
   background: white;
   border-bottom: 2px solid #2b13bb;
 }
+
 .leaflet-draw-draw-polyline {
-  top: 478px !important;
+  top: 55%; /* changed from 478px */
   position: absolute;
-  left: 643px;
+  left: 70%; /* changed from 643px */
   border: 2px solid #2b13bb !important;
   border-bottom: 2px solid darkblue;
   height: 37px !important;
   width: 37px !important;
   border-radius: 5px 5px 5px 5px !important;
 }
+
 .leaflet-control-edit-interior {
   font-size: 15px;
   position: absolute !important;
   height: 37px !important;
   width: 37px !important;
-  top: 501px !important;
+  top: 58%; /* changed from 501px */
   border: 2px solid #2b13bb;
   border-radius: 5px 5px 5px 5px !important;
-  /* display: none; */
-  left: 555px !important;
+  left: 60%; /* changed from 555px */
   border-bottom: 2px solid #2b13bb !important;
 }
+
 .leaflet-draw-toolbar a {
-    background-image: url(images/spritesheet.png);
-    background-image: linear-gradient(transparent, transparent), url(images/spritesheet.svg);
-    background-repeat: no-repeat;
-    background-size: 360px 36px !important;
-    background-clip: padding-box;
+  background-image: url(images/spritesheet.png);
+  background-image: linear-gradient(transparent, transparent), url(images/spritesheet.svg);
+  background-repeat: no-repeat;
+  background-size: 360px 36px !important;
+  background-clip: padding-box;
 }
   </style>
   
