3 new departmet add

--- a/geometry.html
+++ b/geometry.html
@@ -105,7 +105,7 @@
 			zoomAnimation: true,
 			dragging: false, // Disable dragging
    			zoomControl: false,
-			scrollWheelZoom: false, // Disable scroll wheel zoom
+			scrollWheelZoom: true, // Disable scroll wheel zoom
 			doubleClickZoom: false, // Disable double-click zoom
 			touchZoom: false
 
