add new 3 department

--- a/solidWasteManagement.html
+++ b/solidWasteManagement.html
@@ -260,7 +260,7 @@ border-radius: 5px 5px 5px 5px !important;
 	</div>
 	<script src="js/config.js"></script>
 
-	<script src="js/solidBaseManagement.js"></script>
+	<script src="js/solidWasteManagement.js"></script>
 
 	<script>
 		function toggleSelectLayerButton(show) {
