--- a/road.html
+++ b/road.html
@@ -17,7 +17,7 @@
   position: fixed;
   color: black;
   padding: 0px 5px;
-  display: block;
+  display: none;
   top: 75%; /* changed from 683px */
   font-size: 19px;
   height: 37px;
@@ -50,7 +50,7 @@
   background-color: white;
   color: black;
   padding: 3px 7px;
-  display: block;
+  display: none;
   position: fixed;
   top: 75%; /* changed from 683px */
   font-size: 15px;
