--- a/electric-work.html
+++ b/electric-work.html
@@ -6,212 +6,8 @@
     <title>PMC</title>
     <link rel="icon" href="png/pmcjpeg.png" type="image/x-icon" />
     <link rel="stylesheet" href="css/style.css" />
-    <!-- <link rel="stylesheet" href="C_form.css" /> -->
+    <link rel="stylesheet" href="css/electric.css"/>
 
-    <style>
-      .leaflet-draw-toolbar .leaflet-bar .leaflet-draw-toolbar-top {
-        display: none !important;
-      }
-      #map {
-        top: 0px;
-        left: 0px;
-        height: 99vh;
-        width: 100%;
-        z-index: 1;
-      }
-      .leaflet-draw-toolbar .leaflet-bar {
-        display: none !important;
-      }
-      .leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-circle {
-        background-position: -89px 1px !important;
-      }
-      .leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-polyline {
-        background-position: 2px 3px !important;
-      }
-      .leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-polygon {
-        background-position: -28px 1px !important;
-      }
-
-      .leaflet-container .leaflet-control-attribution {
-        display: none;
-      }
-
-      .leaflet-control-zoom {
-        position: absolute;
-        left: 96vw;
-        top: 85vh;
-        border: 2px solid darkblue;
-      }
-
-      .leaflet-touch .leaflet-control-layers,
-      .leaflet-touch .leaflet-bar {
-        background-clip: padding-box;
-        border: 2px solid darkblue;
-      }
-      .draw_feature {
-        top: 574px !important;
-        left: 699px;
-        position: relative;
-        height: 37px;
-        width: 37px;
-        border: 2px solid #2b13bb !important;
-      }
-      #saveDataButton {
-        border: 2px solid #2b13bb;
-        border-bottom: 2px solid #2b13bb;
-        border-top: 2px solid #2b13bb;
-        border-radius: 5px 5px 5px 5px;
-        background-color: white;
-        position: fixed;
-        color: black;
-        padding: 0px 5px;
-        display: none;
-        top: 690px;
-        font-size: 19px;
-        height: 37px;
-        width: 37px;
-        left: 880px;
-      }
-      #deleteFeatureButton {
-        border: 2px solid #2b13bb;
-        border-top: 2px solid #2b13bb;
-        border-radius: 5px 5px 5px 5px;
-        background-color: white;
-        color: black;
-        padding: 3px 7px;
-        display: none;
-        position: fixed;
-        top: 690px;
-        font-size: 15px;
-        height: 37px;
-        width: 37px;
-        left: 925px;
-      }
-      .leaflet-draw-draw-polygon {
-        left: 575px !important;
-        position: absolute !important;
-        top: 414px !important;
-        height: 37px !important;
-        width: 37px !important;
-        border-bottom: 2px solid #2b13bb !important;
-        border-top: 2px solid #2b13bb !important;
-        border-left: 2px solid #2b13bb !important;
-        border-right: 2px solid #2b13bb !important;
-        border-radius: 5px 5px 5px 5px !important;
-      }
-      .leaflet-draw-draw-polyline {
-        top: 414px !important;
-        position: absolute !important;
-        left: 659px !important;
-        border: 2px solid #2b13bb !important;
-        border-bottom: 2px solid darkblue;
-        height: 37px !important;
-        width: 37px !important;
-        border-radius: 5px 5px 5px 5px !important;
-      }
-    
-
-      #editFeatureButton {
-        border: 2px solid #2b13bb;
-        border-radius: 5px 5px 5px 5px;
-        height: 37px !important;
-        width: 37px !important;
-        display: none !important; 
-        position: fixed;
-        top: 690px;
-        left: 838px;
-        padding: 5px;
-        background: white;
-        border-bottom: 2px solid #2b13bb;
-      }
-      .custom-button {
-        width: auto;
-        padding: 1px 2px;
-        background-color: #fff;
-        /* color: darkblue; */
-        font-weight: bold;
-        font-size: 10px !important;
-        border: 2px solid #2b13bb;
-        border-radius: 5px !important;
-        cursor: pointer;
-        /* position: absolute; */
-        top: 680px !important;
-        left: 741px !important;
-        height: 37px !important;
-        width: 37px !important;
-        transition: background-color 0.1s;
-      }
-      #save-button {
-        /* border: 2px solid rgb(187, 187, 187); */
-        border-radius: 5px 5px 5px 5px;
-        background-color: white;
-        color: black;
-        padding: 7px;
-        display: none;
-        position: absolute;
-        border: 2px solid #2b13bb;
-        border-top: 2px solid #2b13bb;
-        border-bottom: 2px solid #2b13bb;
-        top: 480px;
-        height: 37px;
-        width: 37px;
-        left: 532px;
-        font-size: 15px;
-        border-bottom: 2px solid #2b13bb;
-      }
-      .delete-button {
-        border: 2px solid #2b13bb;
-        padding: 6px 7.3px;
-        font-size: 14px;
-        border-radius: 5px 5px 5px 5px;
-        display: block;
-        background-color: white;
-        color: black;
-        cursor: pointer;
-        left: 448px;
-        position: absolute;
-        top: 425px !important;
-        height: 37px;
-        width: 37px;
-        display: none;
-        border-top: 2px solid #2b13bb !important;
-        border-bottom: 2px solid #2b13bb !important;
-        border-left: 2px solid #2b13bb !important;
-        border-right: 2px solid #2b13bb !important;
-      }
-
-      .leaflet-control-edit-interior {
-        font-size: 15px;
-        position: absolute !important;
-        height: 37px !important;
-        width: 37px !important;
-        top: 438px !important;
-        border: 2px solid #2b13bb;
-        border-radius: 5px 5px 5px 5px !important;
-        display: none;
-        left: 490px !important;
-        border-bottom: 2px solid #2b13bb !important;
-      }
-      .leaflet-draw-draw-circle {
-        position: absolute;
-        top: 414px;
-        left: 618px;
-        border-bottom: 2px solid #2b13bb !important;
-        border-top: 2px solid #2b13bb !important;
-        border-left: 2px solid #2b13bb !important;
-        border-right: 2px solid #2b13bb !important;
-        border-top: none;
-        width: 37px !important;
-        height: 37px !important;
-        border-radius: 5px 5px 5px 5px !important;
-      }
-      .leaflet-draw-edit-edit {
-        display: none !important;
-      }
-      .leaflet-draw-edit-remove {
-        display: none !important;
-      }
-    </style>
     <!-- bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
