--- a/ward.html
+++ b/ward.html
@@ -10,6 +10,9 @@
       .leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-polyline {
         background-position: 2px 2px !important;
       }
+      .save-button .leaflet-control{
+        display: none !important;
+      }
       #saveDataButton {
         border: 2px solid #2b13bb;
         border-bottom: 2px solid #2b13bb;
@@ -44,7 +47,7 @@
         position: fixed !important;
         transition: background-color 0.1s;
       }
-      #deleteFeatureButton {
+      .delete-button {
         border: 2px solid #2b13bb;
         border-top: 2px solid #2b13bb;
         border-radius: 5px 5px 5px 5px;
