--- a/js/index.html
+++ b/js/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>403 Forbidden</title>
-</head>
-<body>
+  </head>
+  <body>
     <h3>403 Forbidden</h3>
-      <p> You don't have permission to access this resource.</p> 
-      
-</body>
+    <p>You don't have permission to access this resource.</p>
+  </body>
 </html>
