--- a/electric-work.html
+++ b/electric-work.html
@@ -116,7 +116,7 @@
         border-radius: 5px 5px 5px 5px;
         height: 37px !important;
         width: 37px !important;
-        display: none !important; 
+        display: block !important; 
         position: fixed;
         top: 690px;
         left: 838px;
@@ -435,7 +435,7 @@
         map.on("click", function (e) {
           let size = map.getSize();
           let bbox = map.getBounds().toBBoxString();
-          let layer = "pmc:Bhavan";
+          let layer = "pmc:Exist_Road";
 
           var url = `https://iwmsgis.pmc.gov.in//geoserver/pmc/wms?SERVICE=WMS&VERSION=1.1.1&REQUEST=GetFeatureInfo&FORMAT=image%2Fpng&TRANSPARENT=true&QUERY_LAYERS=${layer}&STYLES&LAYERS=${layer}&exceptions=application%2Fvnd.ogc.se_inimage&INFO_FORMAT=application/json&FEATURE_COUNT=50&X=${Math.round(
             e.containerPoint.x
@@ -546,11 +546,12 @@ $('#workTableData').html(contentData);
       );
 
       var lastInsertedId = localStorage.getItem("lastInsertedId");
+      var lenghtSelect = turf.length(selectCoordinatesData[0].geometry, { units: 'meters' });
 
 
       var payload = JSON.stringify({
         geoJSON: JSON.stringify(featureData),
-        roadLength: roadLength,
+        roadLength: lenghtSelect,
         bufferWidth: bufferWidth,
         gis_id: lastInsertedId,
         department: department,
@@ -633,7 +634,7 @@ $('#workTableData').html(contentData);
   formData.append('geometry', JSON.stringify(selectCoordinatesData[0].geometry.coordinates?.map(coordinates => coordinates.slice().reverse())));
   formData.append('road_no', '11');
   formData.append('user_id', '5');
-  formData.append('length', area);
+  formData.append('length', lenghtSelect);
   formData.append('width', width);
 
             $.ajax({
@@ -877,23 +878,55 @@ $('#workTableData').html(contentData);
         };
       }
 
-      document
-        .getElementById("editFeatureButton")
-        .addEventListener("click", function (event) {
-          event.preventDefault();
-          event.stopPropagation();
-          selectedFeature.eachLayer(function (layer) {
-            if (layer.editing) {
-              layer.editing.enable();
-            } else {
-              layer.on("click", function () {
+
+      function updatePopup(layer) {
+  let content;
+  var coordinates = layer._latlngs[0];
+  var turfCoords = coordinates.map(function (coord) {
+    return [coord.lng, coord.lat];
+  });
+
+  if (layer instanceof L.Polyline) {
+    var line = turf.lineString(turfCoords);
+    var length = turf.length(line, { units: 'meters' });
+    content = length.toFixed(2) + " M"; // Fixed length to 2 decimal places
+  } else if (layer instanceof L.Polygon) {
+    var polygon = turf.polygon([turfCoords]);
+    var area = turf.area(polygon);
+    content = area.toFixed(2) + " SQM"; // Fixed area to 2 decimal places
+  }
+
+  if (!layer._popup) {
+    layer.bindPopup(content);
+  } else {
+    layer.setPopupContent(content);
+  }
+  layer.openPopup();
+}
+
+
+document.getElementById("editFeatureButton").addEventListener("click", function (event) {
+    event.preventDefault();
+    event.stopPropagation();
+   selectedFeature.eachLayer(function (layer) {
+        if (layer.editing) {
+            layer.editing.enable();
+            layer.on('edit', function () {
+                updatePopup(layer);
+            });
+        } else {
+            layer.on("click", function () {
                 if (this.editing) {
-                  this.editing.enable();
+                    this.editing.enable();
+                    updatePopup(this);
+                    this.on('edit', function () {
+                        updatePopup(this);
+                    });
                 }
-              });
-            }
-          });
-        });
+            });
+        }
+    });
+}); 
 
       document
         .getElementById("deleteFeatureButton")
