--- a/dashboard.html
+++ b/dashboard.html
@@ -1716,7 +1716,7 @@ ented   //////////////////////////////////////////////
 
         function getValues(callback) {
           var geoServerURL =
-            "https://iwmsgis.pmc.gov.in//geoserver/pmc/wms?service=WFS&version=1.1.0&request=GetFeature&typeName=IWMS_point&propertyName=" + selectedValue + "&outputFormat=application/json";
+            "https://iwmsgis.pmc.gov.in//geoserver/pmc/wms?service=WFS&version=1.1.0&request=GetFeature&typeName=IWMS_point,IWMS_polygon,IWMS_line&propertyName=" + selectedValue + "&outputFormat=application/json";
 
           $.getJSON(geoServerURL, function (data) {
             var workTypeSet = new Set();
