--- a/dashboard.html
+++ b/dashboard.html
@@ -1685,10 +1685,10 @@ ented   //////////////////////////////////////////////
 
     $(document).ready(function () {
       var columns = [
-        "works_aa_a",
-        "name_of_wo",
-        "scope_of_w",
-        "je_name",
+        "Work_ID",
+        "Name_of_Work",
+        "Scope_of_Work",
+        "Name_of_JE",
         "length"
       ];
 
