add dashboard and slum department

--- a/dashboard.html
+++ b/dashboard.html
@@ -282,7 +282,7 @@
     <!-- <h5 class="text-dark fw-bold">Geo<span class="text-dark">Pulse</span></h5> -->
     <h5 class="tablestats">
     </h5>
-    <div class="input-group ">
+    <div class="input-group">
 
 
       <select class="form-select ms-auto" aria-label="Select search category" id="search_type"
@@ -2208,9 +2208,9 @@ function tableData(typeName, geoServerURL,cqlFilter){
             }, 5000); // Remove the bounds layer after 5 seconds (adjust duration as needed)
           });
           // drag and drop
-          $(function () {
-            $("#table-container-dashboard").draggable();
-          });
+          // $(function () {
+          //   $("#table-container-dashboard").draggable();
+          // });
 
 
 
