--- a/ward.html
+++ b/ward.html
@@ -6,77 +6,9 @@
     <title>PMC</title>
     <link rel="icon" href="png/pmcjpeg.png" type="image/x-icon" />
     <link rel="stylesheet" href="css/style.css" />
-    <style>
-      .leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-polyline {
-        background-position: 2px 2px !important;
-      }
-      .save-button .leaflet-control{
-        display: none !important;
-      }
-      #saveDataButton {
-        border: 2px solid #2b13bb;
-        border-bottom: 2px solid #2b13bb;
-        border-top: 2px solid #2b13bb;
-        border-radius: 5px 5px 5px 5px;
-        background-color: white;
-        position: fixed;
-        color: black;
-        padding: 0px 5px;
-        /* display: none; */
-        top: 684px;
-        font-size: 19px;
-        height: 37px;
-        width: 37px;
-        left: 750px;
-      }
-      .custom-button {
-        width: auto;
-        padding: 1px 2px;
-        background-color: #fff;
-        /* color: darkblue; */
-        font-weight: bold;
-        font-size: 10px !important;
-        border: 2px solid #2b13bb;
-        border-radius: 5px !important;
-        cursor: pointer;
-        /* position: absolute; */
-        top: 675px !important;
-        left: 780px !important;
-        height: 36px !important;
-        width: 36px !important;
-        position: fixed !important;
-        transition: background-color 0.1s;
-      }
-      .delete-button {
-        border: 2px solid #2b13bb;
-        border-top: 2px solid #2b13bb;
-        border-radius: 5px 5px 5px 5px;
-        background-color: white;
-        color: black;
-        padding: 3px 7px;
-        /* display: none; */
-        position: fixed;
-        top: 683px !important;
-        font-size: 15px;
-        height: 37px;
-        width: 37px;
-        left: 671px;
-      }
-      #editFeatureButton {
-        border: 2px solid #2b13bb;
-        border-radius: 5px 5px 5px 5px;
-        height: 37px !important;
-        width: 37px !important;
-        /* display: none; */
-        position: fixed;
-        top: 683px;
-        left: 711px;
-        padding: 5px;
-        background: white;
-        border-bottom: 2px solid #2b13bb;
-      }
-    </style>
-
+    <link rel="stylesheet" href="css/ward.css"/>
+    
+    
     <!-- bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -206,14 +138,15 @@
   </head>
 
   <body>
-    <div id="map"></div>
+    <div id="map">
     <p href="https://geopulsea.com/" class="geopulseaname">
       @GeoPulse Analytics
     </p>
 
     <div>
       <img src="png/pmcjpeg.png" alt="" class="logopng1" />
-    </div>
+  
+  </div>
 
     <div id="table-container">
       <table
