--- a/dimension.html
+++ b/dimension.html
@@ -37,6 +37,7 @@
             position: absolute;
             bottom: 20%;
             left: 50%;
+            top: 70%;
             transform: translateX(-50%);
         }
 
@@ -49,6 +50,10 @@
             border-radius: 5px;
             cursor: pointer;
             transition: background-color 0.3s;
+        }
+
+        .my-button:hover {
+            background-color: #1f0e8e;
         }
 
         @media (max-width: 1024px) {
@@ -81,7 +86,7 @@
     </div>
 
     <div class="button-container">
-        <button class="my-button">Click Me!</button>
+        <button class="my-button">Click</button>
     </div>
 
     <script>
