--- a/gardenHorticulture.html
+++ b/gardenHorticulture.html
@@ -6,7 +6,164 @@
 	<title>PMC</title>
 	<link rel="icon" href="png/pmcjpeg.png" type="image/x-icon" />
 	<link rel="stylesheet" href="css/style.css" />
-	<link rel="stylesheet" href="css/Encroachment.css"/>
+	<style>
+		
+.draw_feature{
+	top: 573px !important;
+	left: 705px;
+	position: relative;
+	height: 37px;
+	width: 37px;
+	border: 2px solid #2b13bb !important;
+	}
+ .custom-button {
+  width: auto;
+  padding: 1px 5px;
+  background-color: #fff;
+  /* color: darkblue; */
+  font-weight: bold;
+  font-size: 10px !important;
+  border: 2px solid #2b13bb;
+  border-radius: 5px !important;
+  cursor: pointer;
+  /* position: absolute; */
+ 
+  left: 750px !important;
+  height: 37px !important;
+  width: 37px !important;
+  transition: background-color  0.1s;
+}
+#saveDataButton {
+  border: 2px solid #2b13bb;
+  border-bottom: 2px solid #2b13bb;
+  border-top: 2px solid #2b13bb;
+  border-radius: 5px 5px 5px 5px;
+  background-color: white;
+  position: fixed;
+  color: black;
+  padding: 0px 5px;
+  display: none;
+  top:685px;
+  font-size: 19px;
+  height: 37px;
+  width: 37px;
+  left: 849px;
+}
+#deleteFeatureButton {
+  border: 2px solid #2b13bb;
+  border-top: 2px solid #2b13bb;
+  border-radius: 5px 5px 5px 5px;
+  background-color: white;
+  color: black;
+  padding: 3px 7px;
+  display: none;
+  position: fixed;
+  top: 685px;
+  font-size: 15px;
+  height: 37px;
+  width: 37px;
+  left: 892px;
+}
+
+
+
+#editFeatureButton {
+  border: 2px solid #2b13bb;
+  border-radius: 5px 5px 5px 5px;
+  height: 37px;
+  width: 37px;
+  display: none;
+  position: fixed;
+  top: 685px;
+  left: 805px;
+  padding: 5px;
+  background: white;
+  border-bottom: 2px solid #2b13bb;
+}
+.leaflet-draw-draw-circlemarker {
+  position: absolute;
+  top: 460px !important;
+  left: 660px !important;
+  border-bottom: 2px solid #2B13BB !important;
+  border-top: 2px solid #2B13BB !important;
+  border-left: 2px solid #2B13BB !important;
+  border-right: 2px solid #2B13BB !important;
+  border-top: none;
+  width: 37px !important;
+  height: 37px  !important;
+  border-radius: 5px 5px 5px 5px !important;
+}
+.leaflet-draw-draw-polygon {
+left: 617px !important;
+position: absolute;
+top: 460px !important;
+height: 37px !important;
+width: 37px !important;
+border-bottom: 2px solid #2B13BB !important;
+border-top: 2px solid #2B13BB !important;
+border-left: 2px solid #2B13BB !important;
+border-right: 2px solid #2B13BB !important;
+border-radius: 5px 5px 5px 5px !important;
+}
+#save-button {
+  /* border: 2px solid rgb(187, 187, 187); */
+  border-radius: 5px 5px 5px 5px;
+  background-color: white;
+  color: black;
+  padding: 7px;
+  display: none;
+  position: absolute;
+  border: 2px solid #2b13bb;
+  border-top: 2px solid #2b13bb;
+  border-bottom: 2px solid #2b13bb;
+  top: 527px;
+  height: 37px;
+  width: 37px;
+  left: 530px;
+  font-size: 15px;
+  border-bottom: 2px solid #2b13bb;
+}
+.delete-button {
+  border: 2px solid #2b13bb;
+  padding: 6px 7.3px;
+  font-size: 14px;
+  border-radius: 5px 5px 5px 5px;
+  display: block;
+  background-color: white;
+  color: black;
+  cursor: pointer;
+  left: 484px;
+  position: absolute;
+  top: 473px !important;
+  height: 37px;
+  width: 37px;
+
+  display: none;
+  border-top: 2px solid #2b13bb;
+}
+
+.leaflet-control-edit-interior {
+  font-size: 15px;
+  position: absolute !important;
+  height: 37px !important;
+  width: 37px !important;
+  top: 486px !important;
+  border: 2px solid #2b13bb;
+  border-radius: 5px 5px 5px 5px !important;
+  display: none;
+  left: 570px !important;
+  border-bottom: 2px solid #2b13bb !important;
+}
+.leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-polygon {
+    background-position: -28px 1px !important;
+}
+.leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-circlemarker {
+    background-position: -270px 1px !important;
+  
+}
+  </style>
+
+	</style>
 	
 	<!-- bootstrap -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -103,7 +260,7 @@
 	</div>
 	<script src="js/config.js"></script>
 
-	<script src="js/Enchrochment.js"></script>
+	<script src="js/gardenHorticulture.js"></script>
 
 	<script>
 		function toggleSelectLayerButton(show) {
@@ -131,7 +288,7 @@
 			map.on('click', function (e) {
 				let size = map.getSize();
 				let bbox = map.getBounds().toBBoxString();
-				let layer = 'pmc:PMC_Boundary';
+				let layer = 'pmc:Bhavan';
 
 				var url = `https://iwmsgis.pmc.gov.in/geoserver/pmc/wms?SERVICE=WMS&VERSION=1.1.1&REQUEST=GetFeatureInfo&FORMAT=image%2Fpng&TRANSPARENT=true&QUERY_LAYERS=${layer}&STYLES&LAYERS=${layer}&exceptions=application%2Fvnd.ogc.se_inimage&INFO_FORMAT=application/json&FEATURE_COUNT=50&X=${Math.round(
 					e.containerPoint.x
@@ -296,6 +453,7 @@
 								console.error('Save failed:', error);
 							},
 						});
+console.log(selectCoordinatesData);
 
 let area = turf.area(selectCoordinatesData[0]);
 let centroid = turf.centroid(selectCoordinatesData[0]);
@@ -348,53 +506,22 @@ let centroid = turf.centroid(selectCoordinatesData[0]);
 			};
 		}
 
-		function updatePopup(layer) {
-  let content;
-  var coordinates = layer._latlngs[0];
-  var turfCoords = coordinates.map(function (coord) {
-    return [coord.lng, coord.lat];
-  });
+		document.getElementById('editFeatureButton').addEventListener('click', function (event) {
+			event.preventDefault();
+			event.stopPropagation();
+			selectedFeature.eachLayer(function (layer) {
+				if (layer.editing) {
+					layer.editing.enable();
+				} else {
+					layer.on('click', function () {
+						if (this.editing) {
+							this.editing.enable();
+						}
+					});
+				}
+			});
+		});
 
-  if (layer instanceof L.Polyline) {
-    var line = turf.lineString(turfCoords);
-    var length = turf.length(line, { units: 'meters' });
-    content = length.toFixed(2) + " M"; // Fixed length to 2 decimal places
-  } else if (layer instanceof L.Polygon) {
-    var polygon = turf.polygon([turfCoords]);
-    var area = turf.area(polygon);
-    content = area.toFixed(2) + " SQM"; // Fixed area to 2 decimal places
-  }
-
-  if (!layer._popup) {
-    layer.bindPopup(content);
-  } else {
-    layer.setPopupContent(content);
-  }
-  layer.openPopup();
-}
-
-document.getElementById("editFeatureButton").addEventListener("click", function (event) {
-    event.preventDefault();
-    event.stopPropagation();
-    selectedFeature.eachLayer(function (layer) {
-        if (layer.editing) {
-            layer.editing.enable();
-            layer.on('edit', function () {
-                updatePopup(layer);
-            });
-        } else {
-            layer.on("click", function () {
-                if (this.editing) {
-                    this.editing.enable();
-                    updatePopup(this);
-                    this.on('edit', function () {
-                        updatePopup(this);
-                    });
-                }
-            });
-        }
-    });
-});
 		document.getElementById('deleteFeatureButton').addEventListener('click', function () {
 			if (!selectedFeature) {
 				alert('No feature selected!');
