--- a/dashboard.html
+++ b/dashboard.html
@@ -282,7 +282,7 @@
     <!-- <h5 class="text-dark fw-bold">Geo<span class="text-dark">Pulse</span></h5> -->
     <h5 class="tablestats">
     </h5>
-    <div class="input-group">
+    <div class="input-group ">
 
 
       <select class="form-select ms-auto" aria-label="Select search category" id="search_type"
@@ -615,8 +615,7 @@
         console.log("No filters selected. Map will not be drawn.");
       }
     }
-    var myPieChart;
-    var myLineChart;
+   
 
     function filterData(
       selectedDepartments,
@@ -763,7 +762,7 @@
       });
       // console.log("addded")
       IWMS_polygon.addTo(map).bringToFront();
-
+      
       if (cqlFilter_ward) {
         ward_boundary.setParams({
           CQL_FILTER: cqlFilter_ward,
@@ -792,267 +791,13 @@
         tableData(typeName, geoServerURL,cqlFilter)
 
 
-
-
-      // var layers = ["pmc:IWMS_point", "pmc:IWMS_line"];
-      // var typeName = layers.join(',');
-
-      // var geoServerURL =
-      //   "https://iwmsgis.pmc.gov.in/geoserver/pmc/wms?service=WFS&version=1.1.0&request=GetFeature&typeName=" +
-      //   typeName +
-      //   "&outputFormat=application/json&CQL_FILTER=" +
-      //   encodeURIComponent(cqlFilter);
-
-
-
-      // var openTable = $(document).ready(function () {
-      //   // Function to toggle table visibility
-      //   $("#openTableBtn").click(function () {
-      //     var tableContainer = $("#table-container-dashboard");
-      //     var isOpen = tableContainer.css("display") !== "none";
-      //     if (isOpen) {
-      //       tableContainer.hide(); // Hide the table if it's already open
-      //     } else {
-      //       tableContainer.show(); // Show the table if it's closed
-      //     }
-      //   });
-
-
-
-
-      //   $.getJSON(geoServerURL, function (data) {
-      //     filteredData = data;
-
-      //     var totalcountofselectedrecords = filteredData.totalFeatures;
-      //     var totalTenderAmount = filteredData.features.reduce(function (total, project) {
-      //       var tenderAmount = parseFloat(project.properties.tender_amo);
-      //       return total + (isNaN(tenderAmount) ? 0 : tenderAmount / 100000);
-      //     }, 0);
-
-
-
-      //     var project = data.features;
-      //     const pageSize = 100; // Number of items per page
-      //     let currentPage = 1; // Current page number
-
-      //     function updateTable(project, page) {
-      //       const tableBody = document.getElementById('workTableDashboard').getElementsByTagName('tbody')[0];
-      //       tableBody.innerHTML = '';
-
-      //       const startIndex = (page - 1) * pageSize;
-      //       const endIndex = startIndex + pageSize;
-      //       const currentPageData = project.slice(startIndex, endIndex);
-
-      //       currentPageData.forEach(project => {
-      //         var tenderAmount = parseFloat(project.properties.tender_amo);
-      //         tenderAmount = isNaN(tenderAmount) ? 0 : tenderAmount / 100000;
-
-      //         const row = `
-      //       <tr data-coordinates='${JSON.stringify(project.geometry)}'>
-      //           <td>${project.properties.zone}</td>
-      //           <td>${project.properties.ward}</td>
-      //           <td>${project.properties.departme_1}</td>
-      //           <td>${project.properties.work_type}</td>
-      //           <td>${tenderAmount}</td>
-      //           <td>${project.properties.je_name}</td>
-      //           <td>${project.properties.Agency}</td>
-      //           <td>${project.properties.Project_Office}</td> 
-      //           <td>${project.properties.Budget_Code}</td>
-      //           <td>${project.properties.created_at}</td>
-      //           <td>${project.properties.Work_Completion_Date}</td>
-      //       </tr>`;
-
-      //         tableBody.insertAdjacentHTML('beforeend', row);
-      //       });
-
-      //       updatePaginationButtons(project.length);
-      //       const currentPageElement = document.getElementById('currentPage');
-      //       if (currentPageElement) {
-      //         currentPageElement.textContent = currentPage;
-      //       }
-      //     }
-
-      //     function updatePaginationButtons(totalItems) {
-      //       const totalPages = Math.ceil(totalItems / pageSize);
-      //       const pagination = document.getElementById('paginationControls');
-      //       pagination.innerHTML = '';
-
-      //       const previousButton = document.createElement('button');
-      //       previousButton.innerHTML = '<i class="fa-solid fa-backward"></i>';
-      //       previousButton.addEventListener('click', () => {
-      //         if (currentPage > 1) {
-      //           currentPage--;
-      //           updateTable(project, currentPage);
-      //         }
-      //       });
-      //       pagination.appendChild(previousButton);
-
-      //       const pageInfo = document.createElement('P');
-      //       pageInfo.textContent = `Page${currentPage}`;
-      //       pagination.appendChild(pageInfo);
-
-      //       const nextButton = document.createElement('button');
-      //       nextButton.innerHTML = '<i class="fa-solid fa-forward"></i>';
-      //       nextButton.addEventListener('click', () => {
-      //         if (currentPage < totalPages) {
-      //           currentPage++;
-      //           updateTable(project, currentPage);
-      //         }
-      //       });
-      //       pagination.appendChild(nextButton);
-      //     }
-
-      //     // Assuming you have an initial call to updateTable with the initial page
-      //     updateTable(project, currentPage);
-
-      //     $(".tablestats").html(`Total Amount - ${totalTenderAmount.toFixed(2)} L ,
-      //   Total Projects - ${totalcountofselectedrecords}`);
-
-
-
-      //     ///////////////////////////////// new added for speed  19-03-2024 ////////////////////////////////////////////////////
-
-
-
-      //     $("#workTableDashboard tbody").on("click", "tr", function () {
-      //       var coordinatesStr = $(this).data("coordinates");
-      //       var coordinatesObj = coordinatesStr;
-      //       var boundsLayer = L.geoJSON(coordinatesObj, {
-      //         style: {
-      //           fillColor: "blue", // Fill color
-      //           fillOpacity: 0.3, // Fill opacity
-      //           color: "blue", // Border color
-      //           weight: 2, // Border weight
-      //         },
-      //       }).addTo(map); // Add the bounds layer to the map
-
-      //       var bounds = boundsLayer.getBounds(); // Get the bounds of the layer
-      //       map.fitBounds(bounds).setZoom(17.5); // Fit map to the bounds and set zoom level
-
-      //       // Optionally, you can remove the bounds layer after a certain duration
-      //       setTimeout(function () {
-      //         map.removeLayer(boundsLayer);
-      //       }, 5000); // Remove the bounds layer after 5 seconds (adjust duration as needed)
-      //     });
-      //     // drag and drop
-      //     $(function () {
-      //       $("#table-container-dashboard").draggable();
-      //     });
-
-
-
-      //     // -----------------------
-      //     var printButton = $("#printButton")
-      //     var tablestats = $("#tablestats")
-      //     var isClosed = false;
-      //     // tableContainer.slideDown();
-      //     // tableContainer.css({
-      //     //   display: "flex",
-      //     //   flexDirection: "row",
-      //     //   justifyContent: "center",
-      //     // });
-
-      //     $("#closeTableBtnDashboard").click(function () {
-
-      //       var tableContainer = $("#table-container-dashboard");
-      //       tableContainer.hide();
-
-      //     });
-
-
-      //   });
-
-      // });
-
-
       // ====================================
-      function getRandomColor() {
-        var letters = "0123456789ABCDEF";
-        var color = "#";
-        for (var i = 0; i < 6; i++) {
-          color += letters[Math.floor(Math.random() * 16)];
-        }
-        return color;
-      }
-
-      function getLastSixMonthsFromData(data) {
-        var lastSixMonths = [];
-        var today = new Date();
-        var sixMonthsAgo = new Date(
-          today.getFullYear(),
-          today.getMonth() - 6,
-          1
-        );
-        var months = [
-          "January",
-          "February",
-          "March",
-          "April",
-          "May",
-          "June",
-          "July",
-          "August",
-          "September",
-          "October",
-          "November",
-          "December",
-        ];
-
-        data.forEach(function (project) {
-          var date = new Date(project.properties.created_at);
-          if (date >= sixMonthsAgo && date <= today) {
-            var monthYear =
-              months[date.getMonth()] + " " + date.getFullYear();
-            if (!lastSixMonths.includes(monthYear)) {
-              lastSixMonths.push(monthYear);
-            }
-          }
-        });
-
-        lastSixMonths.sort(function (a, b) {
-          var dateA = new Date(
-            a.split(" ")[1],
-            months.indexOf(a.split(" ")[0]),
-            1
-          );
-          var dateB = new Date(
-            b.split(" ")[1],
-            months.indexOf(b.split(" ")[0]),
-            1
-          );
-          return dateA - dateB;
-        });
-
-        return lastSixMonths;
-      }
-
+     
       return filteredData;
     }
 
     // newly added 20/04/2022
-
-
-//             // Trigger the opening of the Select2 dropdown when the select button is clicked
-//             var selectButton = $('#headingOffice button');
-//             selectButton.on('click', function() {
-//                 //select.select2('open');
-//                 // Find the search input within the Select2 dropdown
-// var searchInput = $('.select2-search__field');
-
-// // Handle the click event on the search input
-// searchInput.on('click', function(event) {
-//     // Trigger the opening of the Select2 dropdown
-//     select.select2('open');
-//     // Prevent the default behavior (e.g., focusing the search input) 
-//     // so that the dropdown remains open after clicking on the search input
-//     event.preventDefault();
-//     event.stopPropagation();
-// });
-
-
-
-
-    function loadProjectOff() {
+  function loadProjectOff() {
       var select = $("#project_Off");
       select.empty();
 
@@ -1165,12 +910,6 @@
             return option.text;
         }
 
-
-          // select.select2({
-          //   templateResult: function (option) {
-          //     if (!option.id) {
-          //       return option.text;
-          //     }
 
               var $option = $(
                 '<span class="select2-option"><input type="checkbox" class="select2-option-checkbox" />' +
@@ -2208,9 +1947,9 @@ function tableData(typeName, geoServerURL,cqlFilter){
             }, 5000); // Remove the bounds layer after 5 seconds (adjust duration as needed)
           });
           // drag and drop
-          // $(function () {
-          //   $("#table-container-dashboard").draggable();
-          // });
+          $(function () {
+            $("#table-container-dashboard").draggable();
+          });
 
 
 
@@ -2242,4 +1981,4 @@ function tableData(typeName, geoServerURL,cqlFilter){
 
 </body>
 
-</html>
+</html> 
