--- a/Encroachment.html
+++ b/Encroachment.html
@@ -290,6 +290,10 @@ border-radius: 5px 5px 5px 5px !important;
 				let bbox = map.getBounds().toBBoxString();
 				let layer = 'pmc:PMC_Boundary';
 
+				if( zone_ids != 5 ){
+					layer = 'PMC_wards_admin_boundary';
+				}
+
 				var url = `https://iwmsgis.pmc.gov.in/geoserver/pmc/wms?SERVICE=WMS&VERSION=1.1.1&REQUEST=GetFeatureInfo&FORMAT=image%2Fpng&TRANSPARENT=true&QUERY_LAYERS=${layer}&STYLES&LAYERS=${layer}&exceptions=application%2Fvnd.ogc.se_inimage&INFO_FORMAT=application/json&FEATURE_COUNT=50&X=${Math.round(
 					e.containerPoint.x
 				)}&Y=${Math.round(e.containerPoint.y)}&SRS=EPSG%3A4326&WIDTH=${size.x}&HEIGHT=${size.y
