--- a/ward.html
+++ b/ward.html
@@ -325,7 +325,7 @@
 
           let size = map.getSize();
           let bbox = map.getBounds().toBBoxString();
-          let layer = "pmc:ward_boundary1";
+          let layer = "pmc:PMC_wards_admin_boundary";
 
           var url = `https://iwmsgis.pmc.gov.in/geoserver/pmc/wms?SERVICE=WMS&VERSION=1.1.1&REQUEST=GetFeatureInfo&FORMAT=image%2Fpng&TRANSPARENT=true&QUERY_LAYERS=${layer}&STYLES&LAYERS=${layer}&exceptions=application%2Fvnd.ogc.se_inimage&INFO_FORMAT=application/json&FEATURE_COUNT=50&X=${Math.round(
             e.containerPoint.x
