--- a/sport.html
+++ b/sport.html
@@ -6,7 +6,7 @@
     <title>PMC</title>
     <link rel="icon" href="png/pmcjpeg.png" type="image/x-icon" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/Encroachment.css" />
+    <link rel="stylesheet" href="css/Encroachment.css"/>
 
     <!-- bootstrap -->
     <link
@@ -156,7 +156,7 @@
     </div>
     <script src="js/config.js"></script>
 
-    <script src="js/gardenhorticulture.js"></script>
+    <script src="js/sport.js"></script>
 
     <script>
       function toggleSelectLayerButton(show) {
