--- a/Environtment.html
+++ b/Environtment.html
@@ -156,7 +156,7 @@
     </div>
     <script src="js/config.js"></script>
 
-    <script src="js/gardenhorticulture.js"></script>
+    <script src="js/Environtment.js"></script>
 
     <script>
       function toggleSelectLayerButton(show) {
@@ -376,7 +376,6 @@
                     console.error("Save failed:", error);
                   },
                 });
-                console.log(selectCoordinatesData);
 
                 let area = turf.area(selectCoordinatesData[0]);
                 let centroid = turf.centroid(selectCoordinatesData[0]);
@@ -443,6 +442,31 @@
         };
       }
 
+      function updatePopup(layer) {
+        let content;
+        var coordinates = layer._latlngs[0];
+        var turfCoords = coordinates.map(function (coord) {
+          return [coord.lng, coord.lat];
+        });
+
+        if (layer instanceof L.Polyline) {
+          var line = turf.lineString(turfCoords);
+          var length = turf.length(line, { units: "meters" });
+          content = length.toFixed(2) + " M"; // Fixed length to 2 decimal places
+        } else if (layer instanceof L.Polygon) {
+          var polygon = turf.polygon([turfCoords]);
+          var area = turf.area(polygon);
+          content = area.toFixed(2) + " SQM"; // Fixed area to 2 decimal places
+        }
+
+        if (!layer._popup) {
+          layer.bindPopup(content);
+        } else {
+          layer.setPopupContent(content);
+        }
+        layer.openPopup();
+      }
+
       document
         .getElementById("editFeatureButton")
         .addEventListener("click", function (event) {
@@ -451,16 +475,22 @@
           selectedFeature.eachLayer(function (layer) {
             if (layer.editing) {
               layer.editing.enable();
+              layer.on("edit", function () {
+                updatePopup(layer);
+              });
             } else {
               layer.on("click", function () {
                 if (this.editing) {
                   this.editing.enable();
+                  updatePopup(this);
+                  this.on("edit", function () {
+                    updatePopup(this);
+                  });
                 }
               });
             }
           });
         });
-
       document
         .getElementById("deleteFeatureButton")
         .addEventListener("click", function () {
