--- a/ward.html
+++ b/ward.html
@@ -244,7 +244,6 @@
 
       $(document).ready(function () {
         var wardname = localStorage.getItem("wardname");
-        console.log(wardname);
         // if (wardname) {
         //   var cql_filterm = `Ward_Name IN('Yeravada Kalas Dhanori')`;
         //   fitbou(cql_filterm);
@@ -325,7 +324,9 @@
 
           let size = map.getSize();
           let bbox = map.getBounds().toBBoxString();
-          let layer = "pmc:PMC_wards_admin_boundary";
+          let layer = "pmc:ward_boundary1";
+
+          prabhag_ids.length > 0 ? (layer = "PMC_wards_admin_boundary") : (layer = "pmc:ward_boundary1");
 
           var url = `https://iwmsgis.pmc.gov.in/geoserver/pmc/wms?SERVICE=WMS&VERSION=1.1.1&REQUEST=GetFeatureInfo&FORMAT=image%2Fpng&TRANSPARENT=true&QUERY_LAYERS=${layer}&STYLES&LAYERS=${layer}&exceptions=application%2Fvnd.ogc.se_inimage&INFO_FORMAT=application/json&FEATURE_COUNT=50&X=${Math.round(
             e.containerPoint.x
@@ -373,7 +374,6 @@
           // Check if there is a selected feature
 
           toggleSelectLayerButton(true);
-                console.log(editableLayers.getLayers());
           if (editableLayers.getLayers().length > 0) {
             selectedFeature = editableLayers.getLayers()[0];
 
@@ -387,7 +387,6 @@
               );
 
               $("#table-container").show();
-              console.log(formDataFromStorage);
               let contentData = "<tr>";
               for (const property in formDataFromStorage) {
                 contentData += `<tr><th>${property}</th><td>${formDataFromStorage[property]}</td></tr>`;
@@ -398,8 +397,6 @@
             document
               .getElementById("saveDataButton")
               .addEventListener("click", function () {
-                
-                console.log(selectedFeature);
                 var featureData = selectedFeature.toGeoJSON();
 
 
