--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -33,6 +33,8 @@
 
     <div class="main-content">
       <div class="map-container">
+        <img src="png/pmcjpeg.png" alt="" class="logopng">
+        <a href="https://geopulsea.com/" class="geopulseaname">@GeoPulse Analytics</a>
         <button class="toggle-button" id="toggleFilters"><i class="fa-solid fa-filter"></i></button>
         <div id="map"></div>
         <input type="text" name="daterange" id="daterange"   />
@@ -90,21 +92,13 @@
             <input type="text" placeholder="Search" class="filter-input">
             <ul class="select2 abcscroll" multiple="multiple" id="ward"></ul>
           </div>
-          <div class="filter-group">
-            <label for="village" onclick="toggleFilter(this)">Village Selection <span class="icon-container"><i class="fa-solid fa-angle-down"></i></span><span class="selected-count"></span></label>
-            <input type="text" placeholder="Search" class="filter-input">
-            <ul class="select2 abcscroll" multiple="multiple" id="village"></ul>
-          </div>
+          
           <div class="filter-group">
             <label for="Department" onclick="toggleFilter(this)">Select Department <span class="icon-container"><i class="fa-solid fa-angle-down"></i></span><span class="selected-count"></span></label>
             <input type="text" placeholder="Search" class="filter-input">
             <ul class="select2 abcscroll" multiple="multiple" id="Department"></ul>
           </div>
-          <div class="filter-group">
-            <label for="stage" onclick="toggleFilter(this)">Select Project Status <span class="icon-container"><i class="fa-solid fa-angle-down"></i></span><span class="selected-count"></span></label>
-            <input type="text" placeholder="Search" class="filter-input">
-            <ul class="select2 abcscroll" multiple="multiple" id="stage"></ul>
-          </div>
+      
           <div class="filter-group">
             <label for="Work_Type" onclick="toggleFilter(this)">Select Work Type <span class="icon-container"><i class="fa-solid fa-angle-down"></i></span><span class="selected-count"></span></label>
             <input type="text" placeholder="Search" class="filter-input">
