--- a/road.html
+++ b/road.html
@@ -622,8 +622,11 @@
     }
 
     function updatePopup(layer) {
+      
   let content;
+  console.log(layer)
   var coordinates = layer._latlngs[0];
+  console.log(coordinates)
   var turfCoords = coordinates.map(function (coord) {
     return [coord.lng, coord.lat];
   });
@@ -680,30 +683,7 @@ document.getElementById("editFeatureButton").addEventListener("click", function 
       selectedFeature = null;
     });
 
-    function updatePopup(layer) {
-      let content;
-      var coordinates = layer._latlngs[0]
-      var turfCoords = coordinates.map(function (coord) {
-        return [coord.lng, coord.lat];
-      });
 
-      if (layer instanceof L.Polyline) {
-        var line = turf.lineString(turfCoords);
-        var length = turf.length(line, { units: 'meters' });
-        content = length + "M"
-      } else if (layer instanceof L.Polygon) {
-        var polygon = turf.polygon([turfCoords]);   
-        var area = turf.area(polygon);
-        content = length + "SQM"
-      }
-
-      if (!layer._popup) {
-        layer.bindPopup(content);
-      } else {
-        layer.setPopupContent(content);
-      }
-      layer.openPopup();
-    }
 
     // ----------------------
 
